--- a/12 flexbox.html
+++ b/12 flexbox.html
@@ -11,9 +11,9 @@
             width: 100%;
             border: 2px solid black;
             display: flex;
-            flex-direction: row;
-            justify-content: center;
-           align-items: flex-start;
+          /*  justify-content: space-around;
+           align-items: center; */
+
            column-gap: 80px;
 
 
@@ -22,14 +22,17 @@
 
 
         }
+        
 
-        #box2 {
-            /* align-self: center;
-            position: relative;
-            left: 30%; */
+      /*  #box1{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        if we want to center the elements first we need to flex the display of the parent 
+        container and  then use other properties 
 
-        }
-
+       }
+ */
         .boxes {
             width: 100px;
             height: 100px;
