--- a/13 media quries.html
+++ b/13 media quries.html
@@ -4,8 +4,52 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>media quries</title>
+    <style>
+.container{
+    display: flex;
+    justify-content: center;
+
+   
+}
+
+.box{
+   width: 200px;
+   height: 200px;
+   border: 2px solid black;
+   margin: 5px;
+}
+@media(max-width:800px){
+    .container{
+        padding-top: 20px;
+        margin: 15px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+       width: 100%;
+       height: 100vh;
+        border: 2px solid black;
+    }
+    h1{
+        text-align: center;
+    }
+}
+
+
+
+    </style>
 </head>
 <body>
+  
+    <h1>Media quries</h1>
+    <div class="container">
+     <div class="box">box1</div>
+     <div class="box">Box2</div>
+     <div class="box">Box3</div>
+     <div class="box">Box4</div>
+     <div class="box">Box5</div>
+   </div>
+   </div>
     
 </body>
 </html>
